# paperhunt

./: .env  .gitignore  .isort.cfg  Makefile  keywords.json  papers.db  pyproject.toml  readme.md
.github/workflows/: crawl-papers.yml  deploy-pages.yml  hunt-papers.yml  jekyll.yml  paper-hunting.yml
backend/: ai.py  arxiv_texonomy.json  crawler.py  entity.py  job.py  query.py  repository.py
frontend/: Gemfile  _config.yml  index.markdown
frontend/_includes/: head.html  papers.html  search.html
frontend/_layouts/: default.html
frontend/assets/css/: style.css
frontend/assets/db/: papers.db
frontend/assets/js/: Paper.js  PaperList.js  Repository.js  search.js
