[project]
name = "paperhunt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.1.3",
    "google-generativeai>=0.8.4",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "grpc==1.67.1", # https://discuss.ai.google.dev/t/warning-all-log-messages-before-absl-initializelog-is-called-are-written-to-stderr-e0000-001731955515-629532-17124-init-cc-229-grpc-wait-for-shutdown-with-timeout-timed-out/50020/15
]

[dependency-groups]
dev = [
    "cssbeautifier>=1.15.1",
    "isort>=5.13.2",
    "jsbeautifier>=1.15.1",
    "ruff>=0.9.3",
]
